# krpc

./: .ghci  .gitignore  .travis.yml  CHANGELOG  ChangeLog  LICENSE  NEWS.md  README.md  TODO.org  changelog  krpc.cabal
bench/: Main.hs  Server.hs
examples/: Client.hs  Server.hs  Shared.hs
src/Network/: KRPC.hs
src/Network/KRPC/: Manager.hs  Message.hs  Method.hs  Protocol.hs  Scheme.hs
src/Remote/: KRPC.hs
src/Remote/KRPC/: Method.hs  Protocol.hs  Scheme.hs
tests/: Client.hs  Server.hs  Shared.hs
tests/Network/: KRPCSpec.hs
tests/Network/KRPC/: MessageSpec.hs  MethodSpec.hs
