name:                  krpc
version:               0.1.0.0
license:               MIT
license-file:          LICENSE
author:                Sam T.
maintainer:            Sam T. <pxqr.sta@gmail.com>
copyright:             (c) 2013, Sam T.
category:              Network, Remote
build-type:            Simple
cabal-version:         >=1.8
homepage:              https://github.com/pxqr/krpc
bug-reports:           https://github.com/pxqr/krpc/issues
synopsis:              KRPC remote procedure call protocol implementation.
description:           KRPC remote procedure call protocol implementation.


library
  exposed-modules:     Remote.KRPC
                     , Remote.KRPC.Protocol
                     , Remote.KRPC.Method

  build-depends:       base          == 4.*

                     , lifted-base   >= 0.1.1
                     , transformers  >= 0.2
                     , monad-control >= 0.3

                     , bytestring   >= 0.10
                     , containers   >= 0.4
                     , bencoding    >= 0.1

                     , network      >= 2.3


  hs-source-dirs:      src
  extensions:          PatternGuards
  ghc-options:         -Wall



executable echo-client
  main-is:             Client.hs
  other-modules:       Shared

  build-depends:       base        == 4.*
                     , krpc

  hs-source-dirs:      examples



executable echo-server
  main-is:             Server.hs
  other-modules:       Shared

  build-depends:       base        == 4.*
                     , krpc

  hs-source-dirs:      examples
