name:                  krpc
version:               0.1.0.0
license:               MIT
license-file:          LICENSE
author:                Sam T.
maintainer:            Sam T. <pxqr.sta@gmail.com>
copyright:             (c) 2013, Sam T.
category:              Network, Remote
build-type:            Simple
cabal-version:         >=1.8
homepage:              https://github.com/pxqr/krpc
bug-reports:           https://github.com/pxqr/krpc/issues
synopsis:              KRPC remote procedure call protocol implementation.
description:           KRPC remote procedure call protocol implementation.

source-repository head
  type:                git
  location:            https://github.com/pxqr/krpc.git



library
  exposed-modules:     Remote.KRPC
                     , Remote.KRPC.Protocol

  build-depends:       base          == 4.*

                     , lifted-base   >= 0.1.1
                     , transformers  >= 0.2
                     , monad-control >= 0.3

                     , bytestring   >= 0.10
                     , containers   >= 0.4
                     , bencoding    >= 0.1

                     , network      >= 2.3


  hs-source-dirs:      src
  extensions:          PatternGuards
  ghc-options:         -Wall




executable exsample-client
  main-is:             Client.hs
  other-modules:       Shared
  build-depends:       base        == 4.*, krpc, bytestring
  hs-source-dirs:      examples

executable exsample-server
  main-is:             Server.hs
  other-modules:       Shared
  build-depends:       base        == 4.*, krpc, bytestring
  hs-source-dirs:      examples




executable bench-server
  main-is:             Server.hs
  build-depends:       base        == 4.*, krpc, bytestring
  hs-source-dirs:      bench
  ghc-options:         -O2 -fforce-recomp

benchmark bench-client
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      bench
  build-depends:       base == 4.5.*, krpc, criterion, bytestring
  ghc-options:         -O2 -fforce-recomp